--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           computer science and dedicated to pursuing a successful career
           in the tech industry.</p1>
           <div class="btn-box">
-            <a href="#">Hire Me</a>
-            <a href="#">Let's Talk</a>
+            <a href="https://www.linkedin.com/in/sharath-p-811b00244">Hire Me</a>
+            <a href="mailto:sharathpoojari456@gmail.com">Let's Talk</a>
           </div>
       </div>
       <div class="home-sci">
-        <a href="#"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://www.linkedin.com/in/sharath-p-811b00244" target="_blank"><i class='bx bxl-linkedin'></i></a>
         <a href="#"><i class='bx bxl-twitter'></i></a>
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-github'></i></a>
+        <a href="mailto:sharathpoojari456@gmail.com"><i class='bx bxl-gmail'></i></a>
+        <a href="https://github.com/sharathp23" target="_blank"><i class='bx bxl-github'></i></a>
       </div>
     </section>
     <section class="about" id="about">
