--- a/index.html
+++ b/index.html
@@ -109,12 +109,27 @@
           <div class="skills-content">
 
             <div class="progress">
-              <h3>HTML <span>80%</span></h3>
+              <h3>FLUTTER <span>70%</span></h3>
               <div class="bar"><span></span></div>
             </div>
 
             <div class="progress">
-              <h3>CSS <span>70%</span></h3>
+              <h3>PYTHON <span>60%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>C <span>70%</span></h3>
+              <div class="bar"><span></span></div>
+            </div> 
+
+            <div class="progress">
+              <h3>HTML <span>60%</span></h3>
+              <div class="bar"><span></span></div>
+            </div>
+
+            <div class="progress">
+              <h3>CSS <span>60%</span></h3>
               <div class="bar"><span></span></div>
             </div>
 
@@ -123,15 +138,6 @@
               <div class="bar"><span></span></div>
             </div>
 
-            <div class="progress">
-              <h3>Flutter <span>60%</span></h3>
-              <div class="bar"><span></span></div>
-            </div>
-
-            <div class="progress">
-              <h3>C <span>90%</span></h3>
-              <div class="bar"><span></span></div>
-            </div> 
           </div>
         </div>
       </div>
